2015-07-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/test_utils.pl: Add directories containing XSParagraph 
	files to the module include path, so that running, e.g.,
	"perl -w t/80include.t" works.  Suggestion from Patrice.

2015-07-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Inserting Quotation Marks): Narrow prototype 
	text for rightmost column.

2015-07-06  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi: Change @t to @code, @command or @samp in 
	node names.

2015-07-05  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Structuring.pm (_sort_index_entries,
	_sort_index_entries_in_letter): use 'index_at_command'
	to sort index entries when 'number' is not enough.  Report
	from Norbert Preining and Chris Lamb.
	* tp/t/09indices.t: add corresponding test case.

2015-07-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm
	(new_formatter): Set 'suppress_styles' on formatter object.
	(_node_line, _printindex_formatted): Pass 'suppress_styles' 
	option to line formatter.
	(%index_style_commands): New hash.
	(_convert) <command has styles>: If styles are suppressed, 
	suppress styles unless the command is in %index_style_commands, 
	or it was defined with @definfoenclose.
	<cross-reference command>: Suppress styles for converting node 
	name.
	<menu entry>: Suppress styles for node names.

2015-07-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert) <brace commands 
	with no arguments>: Don't call 
	Texinfo::Convert::Text::brace_no_arg_command for @dots or 
	@enddots, to prevent the Unicode ellipsis character from being 
	used.

2015-07-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Makefile.am,
	* tp/tests/htmlxref/Makefile.am,
	* tp/tests/htmlxref-only_mono/Makefile.am,
	* tp/tests/htmlxref-only_split/Makefile.am,
	* tp/tests/many_input_files/Makefile.am,
	* tp/tests/run_parser_all.sh,
	* tp/tests/t/stdout.sh,
	* tp/tests/t/stdout_split.sh: