@@ -1,7 +1,7 @@
 $Id$
 texinfo/util/tests/README
 
-  Copyright 2013 Free Software Foundation, Inc.
+  Copyright 2015 Free Software Foundation, Inc.
 
   Copying and distribution of this file, with or without modification,
   are permitted in any medium without royalty provided the copyright
@@ -9,9 +9,11 @@ texinfo/util/tests/README
 
 Perhaps some day we will actually make these work.  We can't just invoke
 them unconditionally, since people may or may not have working TeX
-installations.  And even  checking whether it is working or not is not
+installations.  And even checking whether it is working or not is not
 simple.
 
 The txitextest script compares old and new results of running manuals
 through texinfo.tex.  The texinfo.tex developer(s) run this from cron
 nightly as an imperfect check against errors and/or reversions creeping in.
+
+texi2dvi_helpversion.sh is run by "make check".
